--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -10,33 +10,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c65e1270",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pillow in c:\\users\\milan joshi\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages (9.1.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 22.0.2; however, version 22.0.4 is available.\n",
-      "You should consider upgrading via the 'C:\\Users\\Milan Joshi\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install pillow"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "b1c4bd7c",
    "metadata": {},
@@ -145,10 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7021ab02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'll_A' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m vehicles \u001b[38;5;241m=\u001b[39m [\u001b[43mll_A\u001b[49m, ll_70R, ll_70RT]\n\u001b[0;32m      2\u001b[0m classA_pair, class70R, class70RT \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mlist\u001b[39m(i\u001b[38;5;241m.\u001b[39mloadpair) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m vehicles]\n\u001b[0;32m      3\u001b[0m loads \u001b[38;5;241m=\u001b[39m [classA_pair, class70R, class70RT]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'll_A' is not defined"
+     ]
+    }
+   ],
    "source": [
     "vehicles = [ll_A, ll_70R, ll_70RT]\n",
     "classA_pair, class70R, class70RT = [list(i.loadpair) for i in vehicles]\n",
@@ -218,229 +203,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "3ec70ad1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>0.00</th>\n",
-       "      <th>6.25</th>\n",
-       "      <th>12.50</th>\n",
-       "      <th>18.75</th>\n",
-       "      <th>25.00</th>\n",
-       "      <th>31.25</th>\n",
-       "      <th>37.50</th>\n",
-       "      <th>43.75</th>\n",
-       "      <th>50.00</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">MaxBM</th>\n",
-       "      <th>ClassA</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>2361.037</td>\n",
-       "      <td>4068.075</td>\n",
-       "      <td>5120.737</td>\n",
-       "      <td>5526.150</td>\n",
-       "      <td>5340.038</td>\n",
-       "      <td>4327.675</td>\n",
-       "      <td>2494.638</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Class70RW</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>4826.025</td>\n",
-       "      <td>8200.950</td>\n",
-       "      <td>10182.475</td>\n",
-       "      <td>10877.400</td>\n",
-       "      <td>10163.225</td>\n",
-       "      <td>8053.750</td>\n",
-       "      <td>4611.975</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Class70RT</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>3651.438</td>\n",
-       "      <td>6259.675</td>\n",
-       "      <td>7823.212</td>\n",
-       "      <td>8342.050</td>\n",
-       "      <td>7823.588</td>\n",
-       "      <td>6260.425</td>\n",
-       "      <td>3652.563</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">MaxSF+</th>\n",
-       "      <th>ClassA</th>\n",
-       "      <td>445.318</td>\n",
-       "      <td>376.622</td>\n",
-       "      <td>307.926</td>\n",
-       "      <td>238.122</td>\n",
-       "      <td>169.426</td>\n",
-       "      <td>99.676</td>\n",
-       "      <td>43.520</td>\n",
-       "      <td>13.056</td>\n",
-       "      <td>-0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Class70RW</th>\n",
-       "      <td>895.524</td>\n",
-       "      <td>771.524</td>\n",
-       "      <td>647.524</td>\n",
-       "      <td>521.524</td>\n",
-       "      <td>397.524</td>\n",
-       "      <td>271.524</td>\n",
-       "      <td>148.964</td>\n",
-       "      <td>44.948</td>\n",
-       "      <td>-0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Class70RT</th>\n",
-       "      <td>667.590</td>\n",
-       "      <td>579.390</td>\n",
-       "      <td>492.590</td>\n",
-       "      <td>404.390</td>\n",
-       "      <td>317.590</td>\n",
-       "      <td>229.390</td>\n",
-       "      <td>142.590</td>\n",
-       "      <td>54.390</td>\n",
-       "      <td>-0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">MaxSF-</th>\n",
-       "      <th>ClassA</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>-12.030</td>\n",
-       "      <td>-51.234</td>\n",
-       "      <td>-106.602</td>\n",
-       "      <td>-175.162</td>\n",
-       "      <td>-244.966</td>\n",
-       "      <td>-313.662</td>\n",
-       "      <td>-383.466</td>\n",
-       "      <td>-452.162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Class70RW</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>-17.024</td>\n",
-       "      <td>-87.536</td>\n",
-       "      <td>-208.476</td>\n",
-       "      <td>-332.476</td>\n",
-       "      <td>-458.476</td>\n",
-       "      <td>-582.476</td>\n",
-       "      <td>-708.476</td>\n",
-       "      <td>-832.476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Class70RT</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>-54.810</td>\n",
-       "      <td>-143.010</td>\n",
-       "      <td>-229.810</td>\n",
-       "      <td>-316.610</td>\n",
-       "      <td>-404.810</td>\n",
-       "      <td>-491.610</td>\n",
-       "      <td>-579.810</td>\n",
-       "      <td>-666.610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">MaxSF</th>\n",
-       "      <th>ClassA</th>\n",
-       "      <td>445.318</td>\n",
-       "      <td>376.622</td>\n",
-       "      <td>307.926</td>\n",
-       "      <td>238.122</td>\n",
-       "      <td>175.162</td>\n",
-       "      <td>244.966</td>\n",
-       "      <td>313.662</td>\n",
-       "      <td>383.466</td>\n",
-       "      <td>452.162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Class70RW</th>\n",
-       "      <td>895.524</td>\n",
-       "      <td>771.524</td>\n",
-       "      <td>647.524</td>\n",
-       "      <td>521.524</td>\n",
-       "      <td>397.524</td>\n",
-       "      <td>458.476</td>\n",
-       "      <td>582.476</td>\n",
-       "      <td>708.476</td>\n",
-       "      <td>832.476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Class70RT</th>\n",
-       "      <td>667.590</td>\n",
-       "      <td>579.390</td>\n",
-       "      <td>492.590</td>\n",
-       "      <td>404.390</td>\n",
-       "      <td>317.590</td>\n",
-       "      <td>404.810</td>\n",
-       "      <td>491.610</td>\n",
-       "      <td>579.810</td>\n",
-       "      <td>666.610</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    0.00      6.25      12.50      18.75      25.00  \\\n",
-       "MaxBM  ClassA       0.000  2361.037  4068.075   5120.737   5526.150   \n",
-       "       Class70RW    0.000  4826.025  8200.950  10182.475  10877.400   \n",
-       "       Class70RT    0.000  3651.438  6259.675   7823.212   8342.050   \n",
-       "MaxSF+ ClassA     445.318   376.622   307.926    238.122    169.426   \n",
-       "       Class70RW  895.524   771.524   647.524    521.524    397.524   \n",
-       "       Class70RT  667.590   579.390   492.590    404.390    317.590   \n",
-       "MaxSF- ClassA       0.000   -12.030   -51.234   -106.602   -175.162   \n",
-       "       Class70RW    0.000   -17.024   -87.536   -208.476   -332.476   \n",
-       "       Class70RT    0.000   -54.810  -143.010   -229.810   -316.610   \n",
-       "MaxSF  ClassA     445.318   376.622   307.926    238.122    175.162   \n",
-       "       Class70RW  895.524   771.524   647.524    521.524    397.524   \n",
-       "       Class70RT  667.590   579.390   492.590    404.390    317.590   \n",
-       "\n",
-       "                      31.25     37.50     43.75    50.00  \n",
-       "MaxBM  ClassA      5340.038  4327.675  2494.638    0.000  \n",
-       "       Class70RW  10163.225  8053.750  4611.975    0.000  \n",
-       "       Class70RT   7823.588  6260.425  3652.563    0.000  \n",
-       "MaxSF+ ClassA        99.676    43.520    13.056   -0.000  \n",
-       "       Class70RW    271.524   148.964    44.948   -0.000  \n",
-       "       Class70RT    229.390   142.590    54.390   -0.000  \n",
-       "MaxSF- ClassA      -244.966  -313.662  -383.466 -452.162  \n",
-       "       Class70RW   -458.476  -582.476  -708.476 -832.476  \n",
-       "       Class70RT   -404.810  -491.610  -579.810 -666.610  \n",
-       "MaxSF  ClassA       244.966   313.662   383.466  452.162  \n",
-       "       Class70RW    458.476   582.476   708.476  832.476  \n",
-       "       Class70RT    404.810   491.610   579.810  666.610  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# A = ['ClassA', 'Class70RW', 'Class70RT']\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# B = ['MaxBM', 'MaxSF+', 'MaxSF-']\u001b[39;00m\n\u001b[0;32m      7\u001b[0m iterables \u001b[38;5;241m=\u001b[39m [A, B]\n\u001b[1;32m----> 8\u001b[0m index \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mMultiIndex\u001b[38;5;241m.\u001b[39mfrom_product(iterables)\n\u001b[0;32m     10\u001b[0m C \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m [maxBMs, maxSFs_plus, maxSFs_minus]:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2272,7 +2048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
