--- a/liveloads.ipynb
+++ b/liveloads.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "676d1c99",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "fbe126e5",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "a471adca",
    "metadata": {},
    "outputs": [],
@@ -66,13 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "405cfa42",
    "metadata": {},
    "outputs": [],
    "source": [
     "#input\n",
-    "def max_rxn(loads, span):\n",
+    "def max_rxn(loads, span, detail = 9):\n",
     "    \"\"\"\n",
     "\n",
     "    Args:\n",
@@ -89,8 +89,8 @@
     "        maxBM = []\n",
     "        maxSF_plus = []\n",
     "        maxSF_minus = []\n",
-    "        for j in range(9):\n",
-    "            at = span / 8 * j\n",
+    "        for j in range(detail):\n",
+    "            at = span / (detail-1) * j\n",
     "            first_wheel_at = 0\n",
     "            step = 0.1\n",
     "\n",
@@ -128,7 +128,7 @@
     "    for i in [maxBMs, maxSFs_plus, maxSFs_minus]:\n",
     "        C.extend(i)\n",
     "\n",
-    "    df = pd.DataFrame(C, index=index, columns=[span / 8 * i for i in range(9)])\n",
+    "    df = pd.DataFrame(C, index=index, columns=[span / (detail -1) * i for i in range(detail)])\n",
     "#     print(df.loc[('ClassA', 'MaxSF-')])   ## you can navigate using loc, iloc\n",
     "\n",
     "    new_row = df.loc['MaxSF+'].where(df.loc['MaxSF+'] > abs(df.loc['MaxSF-']), abs(df.loc['MaxSF-']))\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "3f1b5cb6",
    "metadata": {},
    "outputs": [],
@@ -169,21 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "06edbc6c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.067, 0.5, 0.635, 0.617]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfe = pd.read_excel('outputs/max_e.xlsx', index_col=0)\n",
     "\n",
@@ -207,13 +196,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "36ff4511",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">MaxBM</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">MaxSF+</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">MaxSF-</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">MaxSF</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>ClassA</th>\n",
+       "      <th>Class70RW</th>\n",
+       "      <th>Class70RT</th>\n",
+       "      <th>ClassA</th>\n",
+       "      <th>Class70RW</th>\n",
+       "      <th>Class70RT</th>\n",
+       "      <th>ClassA</th>\n",
+       "      <th>Class70RW</th>\n",
+       "      <th>Class70RT</th>\n",
+       "      <th>ClassA</th>\n",
+       "      <th>Class70RW</th>\n",
+       "      <th>Class70RT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.0</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>463.432</td>\n",
+       "      <td>912.937</td>\n",
+       "      <td>672.992</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>463.432</td>\n",
+       "      <td>912.937</td>\n",
+       "      <td>672.992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7.5</th>\n",
+       "      <td>2967.038</td>\n",
+       "      <td>5922.025</td>\n",
+       "      <td>4417.237</td>\n",
+       "      <td>395.105</td>\n",
+       "      <td>789.603</td>\n",
+       "      <td>585.492</td>\n",
+       "      <td>-16.135</td>\n",
+       "      <td>-21.120</td>\n",
+       "      <td>-60.842</td>\n",
+       "      <td>395.105</td>\n",
+       "      <td>789.603</td>\n",
+       "      <td>585.492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15.0</th>\n",
+       "      <td>5106.825</td>\n",
+       "      <td>10075.950</td>\n",
+       "      <td>7572.175</td>\n",
+       "      <td>325.855</td>\n",
+       "      <td>664.603</td>\n",
+       "      <td>497.992</td>\n",
+       "      <td>-59.772</td>\n",
+       "      <td>-112.063</td>\n",
+       "      <td>-148.342</td>\n",
+       "      <td>325.855</td>\n",
+       "      <td>664.603</td>\n",
+       "      <td>497.992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22.5</th>\n",
+       "      <td>6419.363</td>\n",
+       "      <td>12527.975</td>\n",
+       "      <td>9463.363</td>\n",
+       "      <td>256.605</td>\n",
+       "      <td>539.603</td>\n",
+       "      <td>410.492</td>\n",
+       "      <td>-122.885</td>\n",
+       "      <td>-235.397</td>\n",
+       "      <td>-234.675</td>\n",
+       "      <td>256.605</td>\n",
+       "      <td>539.603</td>\n",
+       "      <td>410.492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30.0</th>\n",
+       "      <td>6911.150</td>\n",
+       "      <td>13377.400</td>\n",
+       "      <td>10092.050</td>\n",
+       "      <td>187.355</td>\n",
+       "      <td>414.603</td>\n",
+       "      <td>322.992</td>\n",
+       "      <td>-192.135</td>\n",
+       "      <td>-360.397</td>\n",
+       "      <td>-322.175</td>\n",
+       "      <td>192.135</td>\n",
+       "      <td>414.603</td>\n",
+       "      <td>322.992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37.5</th>\n",
+       "      <td>6640.462</td>\n",
+       "      <td>12509.725</td>\n",
+       "      <td>9463.588</td>\n",
+       "      <td>118.105</td>\n",
+       "      <td>289.603</td>\n",
+       "      <td>235.492</td>\n",
+       "      <td>-261.385</td>\n",
+       "      <td>-485.397</td>\n",
+       "      <td>-409.675</td>\n",
+       "      <td>261.385</td>\n",
+       "      <td>485.397</td>\n",
+       "      <td>409.675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45.0</th>\n",
+       "      <td>5366.425</td>\n",
+       "      <td>9928.750</td>\n",
+       "      <td>7572.925</td>\n",
+       "      <td>51.780</td>\n",
+       "      <td>164.603</td>\n",
+       "      <td>147.992</td>\n",
+       "      <td>-330.635</td>\n",
+       "      <td>-610.397</td>\n",
+       "      <td>-497.175</td>\n",
+       "      <td>330.635</td>\n",
+       "      <td>610.397</td>\n",
+       "      <td>497.175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52.5</th>\n",
+       "      <td>3101.337</td>\n",
+       "      <td>5703.475</td>\n",
+       "      <td>4416.313</td>\n",
+       "      <td>15.300</td>\n",
+       "      <td>52.190</td>\n",
+       "      <td>60.492</td>\n",
+       "      <td>-399.885</td>\n",
+       "      <td>-735.397</td>\n",
+       "      <td>-584.675</td>\n",
+       "      <td>399.885</td>\n",
+       "      <td>735.397</td>\n",
+       "      <td>584.675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60.0</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-469.135</td>\n",
+       "      <td>-860.397</td>\n",
+       "      <td>-672.175</td>\n",
+       "      <td>469.135</td>\n",
+       "      <td>860.397</td>\n",
+       "      <td>672.175</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         MaxBM                         MaxSF+                       MaxSF-  \\\n",
+       "        ClassA  Class70RW  Class70RT   ClassA Class70RW Class70RT   ClassA   \n",
+       "0.0      0.000      0.000      0.000  463.432   912.937   672.992    0.000   \n",
+       "7.5   2967.038   5922.025   4417.237  395.105   789.603   585.492  -16.135   \n",
+       "15.0  5106.825  10075.950   7572.175  325.855   664.603   497.992  -59.772   \n",
+       "22.5  6419.363  12527.975   9463.363  256.605   539.603   410.492 -122.885   \n",
+       "30.0  6911.150  13377.400  10092.050  187.355   414.603   322.992 -192.135   \n",
+       "37.5  6640.462  12509.725   9463.588  118.105   289.603   235.492 -261.385   \n",
+       "45.0  5366.425   9928.750   7572.925   51.780   164.603   147.992 -330.635   \n",
+       "52.5  3101.337   5703.475   4416.313   15.300    52.190    60.492 -399.885   \n",
+       "60.0     0.000      0.000      0.000   -0.000    -0.000    -0.000 -469.135   \n",
+       "\n",
+       "                            MaxSF                      \n",
+       "     Class70RW Class70RT   ClassA Class70RW Class70RT  \n",
+       "0.0      0.000     0.000  463.432   912.937   672.992  \n",
+       "7.5    -21.120   -60.842  395.105   789.603   585.492  \n",
+       "15.0  -112.063  -148.342  325.855   664.603   497.992  \n",
+       "22.5  -235.397  -234.675  256.605   539.603   410.492  \n",
+       "30.0  -360.397  -322.175  192.135   414.603   322.992  \n",
+       "37.5  -485.397  -409.675  261.385   485.397   409.675  \n",
+       "45.0  -610.397  -497.175  330.635   610.397   497.175  \n",
+       "52.5  -735.397  -584.675  399.885   735.397   584.675  \n",
+       "60.0  -860.397  -672.175  469.135   860.397   672.175  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_maxR = max_rxn(loads, span) # without impact factor\n",
-    "# df_maxR.to_excel('outputs/loads.xlsx') # uncomment to save as excel file\n"
+    "df_maxR = max_rxn(loads, span, detail = 9) # without impact factor\n",
+    "df_maxR.to_excel('outputs/loads.xlsx') # uncomment to save as excel file\n",
+    "df_maxR.T"
    ]
   },
   {
